통계 토글 기능 수정: 전체 통계 영역이 토글되도록 변경

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         
         <!-- 캐릭터와 보상 시스템을 통계 컨테이너 안으로 이동 -->
-        <div class="stats-content-wrapper">
+        <div class="stats-content-wrapper" style="display: none;">
             <div class="character-container">
                 <div class="character-info">
                     <div class="character-avatar">
